# xray-csky_borscht_sdk

./: .gitignore  .hgtags  .vsconfig  CMakeLists.txt  README.md  all_editors.groupproj  build.bat  engine.sln  xray.props  xray.x64.props
3rd party/MagicSoftware/FreeMagic/: CMakeLists.txt
3rd party/libtheora-1.1.1/: CMakeLists.txt
3rd party/libvorbis-1.3.6/: CMakeLists.txt
3rd party/luabind/: CMakeLists.txt  luabind-gcc.dev  luabind.beta7-devel.rc4.vcproj  pch.cpp  pch.h
3rd party/luabind/include/luabind/: class.hpp  config.hpp  luabind_memory_allocator_inline.h  object.hpp  operator.hpp  scope.hpp
3rd party/luabind/src/: class.cpp  open.cpp
3rd party/openal/OpenAL-Windows/Router/: CMakeLists.txt  OpenAL32.rc  alc.cpp
common/: face_smoth_flags.h
xray/editors/ECore/: CMakeLists.txt  ECore.vcxproj  ECore.vcxproj.filters  RenderWindow.hpp  builder_types.cpp  builder_types.h  dllmain.cpp  stdafx.cpp  stdafx.h
xray/editors/ECore/Editor/: BoneEditor.cpp  DeviceScreenshot.cpp  EDetailModel.cpp  ELog.cpp  ELog.h  EStats.cpp  EThumbnail.cpp  EThumbnail.h  EThumbnailGroup.cpp  EThumbnailSound.cpp  EThumbnailTexture.cpp  EditMesh.cpp  EditMesh.h  EditMeshPick.cpp  EditMeshRender.cpp  EditObject.cpp  EditObject.h  EditObjectEditor.cpp  EditObjectIO.cpp  EditObjectImport.cpp  EditObjectMotions.cpp  EditObjectProps.cpp  EditObjectSkin.cpp  EditorPreferences.cpp  EditorPreferences.h  Engine.cpp  ExportObjectOGF.cpp  ExportObjectOGF.h  ExportObjectOGFCalculateTB.cpp  ExportSkeleton.cpp  ExportSkeletonCalculateTB.cpp  GeometryCollector.cpp  ImageManager.cpp  ImageManager.h  ImageManagerDO.cpp  Library.cpp  Library.h  ParticleEffectActions.cpp  ParticleEffectActions.h  SoundManager.cpp  (+15 more)
xray/editors/ECore/Engine/: GameMtlLib.h  bone.cpp  guid_generator.cpp  guid_generator.h
xray/editors/ECore/ImGui/: IM_Canvas.cpp  IM_Canvas.h  IM_ChooseForm.cpp  IM_ChooseForm.h  IM_ImageEditor.cpp  IM_ImageEditor.h  IM_Log.cpp  IM_Log.h  IM_PropertyTree.cpp  IM_PropertyTree.h  IM_SoundEditor.cpp  IM_SoundEditor.h  IM_TextEditor.cpp  IM_TextEditor.h  IM_Tree.cpp  IM_Tree.h  IM_Window.cpp  IM_Window.h  imconfig.h  imgui.cpp  imgui_impl_dx9.cpp  imgui_internal.h  imgui_user.h  utf8.cpp  utf8.h
xray/editors/LevelEditor/: CMakeLists.txt  LevelEditor.cpp  LevelEditor.rc  LevelEditor.vcxproj  LevelEditor.vcxproj.filters  Resource.h  StatusBar.cpp  StatusBar.h  framework.h  stdafx.cpp  stdafx.h
xray/editors/LevelEditor/Edit/: AppendObjectInfoForm.cpp  AppendObjectInfoForm.h  Builder.cpp  Builder.h  BuilderLTX.cpp  BuilderRemote.cpp  Cursor3D.cpp  Custom2DProjector.cpp  CustomObject.cpp  CustomObject.h  CustomObjectAnimation.cpp  CustomObjectLE.cpp  ELight.cpp  ELight.h  ELight_IO.cpp  ELight_props.cpp  EParticlesObject.cpp  EParticlesObject.h  ESceneAIMapControls.cpp  ESceneAIMapTools.cpp  ESceneAIMapTools.h  ESceneAIMapTools_Controls.cpp  ESceneAIMapTools_Generate.cpp  ESceneAIMapTools_MotionSimulator.cpp  ESceneAIMapTools_Render.cpp  ESceneClassList.h  ESceneControlsCustom.cpp  ESceneControlsCustom.h  ESceneCustomMTools.h  ESceneCustomOTools.cpp  ESceneCustomOTools.h  ESceneCustomOToolsIO.cpp  ESceneDOTools.cpp  ESceneDOTools.h  ESceneDOTools_Controls.cpp  ESceneDOTools_Generate.cpp  ESceneDOTools_Pick.cpp  ESceneFogVolumeTools.cpp  ESceneFogVolumeTools.h  ESceneGroupControls.cpp  (+64 more)
xray/editors/LevelEditor/Engine/: communicate.h
xray/editors/LevelEditor/Forms/: DOShuffle.cpp
xray/editors/LevelEditor/ImGui/: IM_ContextMenu.cpp  IM_ContextMenu.h  IM_FrameAIMap.cpp  IM_FrameAIMap.h  IM_FrameDetail.cpp  IM_FrameDetail.h  IM_FrameFogVol.cpp  IM_FrameFogVol.h  IM_FrameGroup.cpp  IM_FrameGroup.h  IM_FrameLight.cpp  IM_FrameLight.h  IM_FrameObject.cpp  IM_FrameObject.h  IM_FramePS.cpp  IM_FramePS.h  IM_FramePortal.cpp  IM_FramePortal.h  IM_FrameSector.cpp  IM_FrameSector.h  IM_FrameShape.cpp  IM_FrameShape.h  IM_FrameSpawn.cpp  IM_FrameSpawn.h  IM_FrameWayPoint.cpp  IM_FrameWayPoint.h  IM_LeftBar.cpp  IM_LeftBar.h  IM_Manipulator.cpp  IM_Manipulator.h  IM_TopBar.cpp  IM_TopBar.h
xray/editors/xrEProps/: CMakeLists.txt  ChoseForm.cpp  ChoseForm.h  EditorChooseEvents.h  FolderLib.cpp  FolderLib.h  ItemListHelper.cpp  ItemListHelper.h  PropertiesListHelper.cpp  PropertiesListTypes.cpp  stdafx.h  xrEProps.vcxproj  xrEProps.vcxproj.filters
xray/utils/ETools/: CMakeLists.txt  CreateDX.cpp  ETools.cpp  ETools.h  ETools.vcxproj
xray/utils/LWO/: CMakeLists.txt  LWO.cpp  LWO.vcxproj
xray/utils/xrDXT/: CMakeLists.txt  ETextureParams.cpp  ETextureParams.h  Image_DXTC.cpp  Image_DXTC.h
xray/utils/xrQSlim/: CMakeLists.txt
xray/utils/xrSE_Factory/: CMakeLists.txt  properties_list_helper_script.cpp  script_properties_list_helper.cpp  stdafx.h  xrSE_Factory.vcxproj  xr_LuaAllocator.c
xray/xrCDB/: CMakeLists.txt  OPC_OBB.cpp  OPC_TreeBuilders.h  Opcode.h  StdAfx.h  xrCDB.h  xrCDB.vcxproj  xrCDB.vcxproj.filters  xrCDB_Collector.cpp  xrCDB_frustum.cpp  xrCDB_ray.cpp
xray/xrCPU_Pipe/: CMakeLists.txt  StdAfx.h  xrCPU_Pipe.vcxproj  xrSkin1W.cpp  xrSkin2W.cpp
xray/xrCore/: CMakeLists.txt  ChooseTypes.H  ELocatorAPI.cpp  ELocatorAPI.h  Frustum.h  ILocatorAPI.h  LocatorAPI.cpp  LocatorAPI.h  LocatorAPI_auth.cpp  LocatorAPI_defs.cpp  LocatorAPI_defs.h  Model.cpp  _fbox.h  _math.cpp  _math.h  _matrix33.h  _sphere.h  _std_extensions.h  _stl_extensions.h  _vector4.h  intrusive_ptr.h  intrusive_ptr_inline.h  memory_monitor.h  memory_usage.cpp  net_utils.h  string_concatenations.cpp  string_concatenations.h  vector.h  xrCore.cpp  xrCore.h  xrCore.rc  xrCore.vcxproj  xrCore.vcxproj.filters  xrCore_platform.h  xrDebug.h  xrDebugNew.cpp  xrDebug_macros.h  xrMemory.h  xrMemory_pso_Copy.cpp  xrMemory_pso_Fill32.cpp  (+1 more)
xray/xrCore/blackbox/: BSUFunctions.cpp  BlackBoxUI.cpp  CrashHandler.cpp  SymbolEngine.h
xray/xrParticles/: CMakeLists.txt
xray/xrSound/: CMakeLists.txt  Sound.h  SoundRender_Core.cpp  SoundRender_Core.h  SoundRender_CoreA.cpp  SoundRender_CoreA.h  SoundRender_Core_Processor.cpp  SoundRender_NoSound.h  sound.cpp  xrSound.vcxproj  xrSound.vcxproj.filters
xray/xrXMLParser/: CMakeLists.txt  tinyxml.h
(+908 files in other folders)
