cmake_minimum_required(VERSION 3.15)
project(xrCore LANGUAGES C CXX)

add_library(${PROJECT_NAME} SHARED)
target_compile_definitions(${PROJECT_NAME} PRIVATE -DXRCORE_EXPORTS)
target_precompile_headers(${PROJECT_NAME} PRIVATE stdafx.h)
target_sources(${PROJECT_NAME} PRIVATE
	blackbox/BlackBoxUI.cpp
	blackbox/BSUFunctions.cpp
	blackbox/BugslayerUtil.h
	blackbox/CrashHandler.cpp
	blackbox/CrashHandler.h
	blackbox/DiagAssert.cpp
	blackbox/DiagAssert.h
	blackbox/GetLoadedModules.cpp
	blackbox/Internal.h
	blackbox/IsNT.cpp
	blackbox/NT4ProcessInfo.cpp
	blackbox/stdafx_.cpp
	blackbox/stdafx_.h
	blackbox/SymbolEngine.h
	blackbox/TLHELPProcessInfo.cpp
	blackbox/WarningsOff.h
	blackbox/WarningsOn.h
	_bitwise.h
	_color.h
	_compressed_normal.cpp
	_compressed_normal.h
	_cylinder.h
	_fbox.h
	_fbox2.h
	_flags.h
	_math.cpp
	_math.h
	_matrix.h
	_matrix33.h
	_obb.h
	_plane.h
	_plane2.h
	_quaternion.h
	_random.h
	_rect.h
	_sphere.cpp
	_sphere.h
	_std_extensions.cpp
	_std_extensions.h
	_stl_extensions.h
	_types.h
	_vector2.h
	_vector3d.h
	_vector3d_ext.h
	_vector4.h
	buffer_vector.h
	buffer_vector_inline.h
	ChooseTypes.H
	client_id.h
	clsid.cpp
	clsid.h
	Coder.hpp
	compression_ppmd_stream.h
	compression_ppmd_stream_inline.h
	cpuid.cpp
	cpuid.h
	crc32.cpp
	ELocatorAPI.cpp
	ELocatorAPI.h
	fastdelegate.h
	file_stream_reader.cpp
	file_stream_reader.h
	FileSystem.cpp
	FileSystem.h
	FileSystem_borland.cpp
	FixedMap.h
	FixedSet.h
	FixedVector.h
	Frustum.cpp
	Frustum.h
	FS.cpp
	FS.h
	FS_impl.h
	FS_internal.h
	FTimer.cpp
	FTimer.h
	ILocatorAPI.h
	intrusive_ptr.h
	intrusive_ptr_inline.h
	LocatorAPI.cpp
	LocatorAPI.h
	LocatorAPI_auth.cpp
	LocatorAPI_defs.cpp
	LocatorAPI_defs.h
#	LocatorAPI_Notifications.cpp
#	LocatorAPI_Notifications.h
	log.cpp
	log.h
	LzHuf.cpp
	lzhuf.h
#	lzo1x_d3.cpp
	memory_allocation_stats.cpp
	memory_monitor.cpp
	memory_monitor.h
	memory_usage.cpp
	Model.cpp
	NET_utils.cpp
	net_utils.h
	os_clipboard.cpp
	os_clipboard.h
	PPMd.h
	ppmd_compressor.cpp
	ppmd_compressor.h
	PPMdType.h
	resource.h
	rt_compressor.cpp
	rt_compressor.h
	rt_compressor9.cpp
	rt_config1x.h
#	rt_lzo.cpp
	rt_lzo.h
	rt_lzo_conf.h
	rt_lzo_config.h
	rt_lzo_dict.h
	rt_lzo_dll.ch
	rt_lzo_init.cpp
	rt_lzo_mchw.ch
	rt_lzo_ptr.h
	rt_lzo_swd.ch
	rt_lzo1_d.ch
	rt_lzo1x.h
	rt_lzo1x_1.cpp
	rt_lzo1x_9x.cpp
	rt_lzo1x_c.ch
	rt_lzo1x_d.ch
	rt_lzo1x_d1.cpp
	rt_lzo1x_d2.cpp
	rt_lzo1x_d3.cpp
	rt_lzoconf.h
	rt_lzodefs.h
	rt_miniacc.h
	stdafx.cpp
	stdafx.h
	stream_reader.cpp
	stream_reader.h
	stream_reader_inline.h
	string_concatenations.cpp
	string_concatenations.h
	string_concatenations_inline.h
	SubAlloc.hpp
	vector.h
	Xr_ini.cpp
	xr_ini.h
	xr_resource.h
	xr_shared.cpp
	xr_shared.h
	xr_trims.cpp
	xr_trims.h
	xrCore.cpp
	xrCore.h
	xrCore.rc
	xrCore_platform.h
#	xrDebug.cpp
	xrDebug.h
	xrDebug_macros.h
	xrDebugNew.cpp
	xrMemory.cpp
	xrMemory.h
	xrMemory_align.cpp
	xrMemory_align.h
	xrMemory_debug.cpp
	xrMemory_POOL.cpp
	xrMEMORY_POOL.h
	xrMemory_pso.h
	xrMemory_pso_Copy.cpp
	xrMemory_pso_Fill.cpp
	xrMemory_pso_Fill32.cpp
	xrMemory_pure.h
	xrMemory_subst_borland.cpp
	xrMemory_subst_borland.h
	xrMemory_subst_msvc.cpp
	xrMemory_subst_msvc.h
	xrPool.h
	xrsharedmem.cpp
	xrsharedmem.h
	xrstring.cpp
	xrstring.h
	xrSyncronize.cpp
	xrSyncronize.h)
target_link_libraries(${PROJECT_NAME} PRIVATE DxErr BugTrap$<$<EQUAL:${CMAKE_SIZEOF_VOID_P},8>:-x64>.lib winmm.lib dbghelp.lib)
