cmake_minimum_required(VERSION 3.15)
project(ECore LANGUAGES C CXX)

add_library(${PROJECT_NAME} SHARED)
target_compile_definitions(${PROJECT_NAME} PRIVATE  -DNO_VCL -D_EDITOR -D_ECOREB)
target_include_directories(${PROJECT_NAME} PRIVATE
	../..
	.)
target_compile_options(${PROJECT_NAME} PRIVATE $<$<CXX_COMPILER_ID:Clang>:-Wno-non-pod-varargs>)
target_precompile_headers(${PROJECT_NAME} PRIVATE stdafx.h)
target_sources(${PROJECT_NAME} PRIVATE
	Editor/ArbitraryList.h
#	Editor/bone.cpp
	Editor/BoneEditor.cpp
#	Editor/c_dinput.cpp
#	Editor/ColorPicker.cpp
#	Editor/ColorPicker.h
	Editor/D3DX_Wrapper.h
	Editor/device.cpp
	Editor/device.h
	Editor/DeviceScreenshot.cpp
	Editor/EDetailModel.cpp
	Editor/EDetailModel.h
	Editor/EditMesh.cpp
	Editor/EditMesh.h
	Editor/EditMeshIO.cpp
	Editor/EditMeshModify.cpp
	Editor/EditMeshPick.cpp
	Editor/EditMeshRender.cpp
	Editor/EditObject.cpp
	Editor/EditObject.h
	Editor/EditObjectEditor.cpp
	Editor/EditObjectImport.cpp
	Editor/EditObjectIO.cpp
	Editor/EditObjectMotions.cpp
	Editor/EditObjectProps.cpp
	Editor/EditObjectSkin.cpp
	Editor/EditorPreferences.cpp
	Editor/EditorPreferences.h
	Editor/ELog.cpp
	Editor/ELog.h
	Editor/Engine.cpp
	Editor/engine.h
	Editor/EStats.cpp
	Editor/EStats.h
	Editor/EThumbnail.cpp
	Editor/EThumbnail.h
	Editor/EThumbnailGroup.cpp
	Editor/EThumbnailObject.cpp
	Editor/EThumbnailSound.cpp
	Editor/EThumbnailTexture.cpp
	Editor/ExportObjectOGF.cpp
	Editor/ExportObjectOGF.h
	Editor/ExportObjectOGFCalculateTB.cpp
	Editor/ExportSkeleton.cpp
	Editor/ExportSkeleton.h
	Editor/ExportSkeletonCalculateTB.cpp
	Editor/GeometryCollector.cpp
	Editor/GeometryCollector.h
#	Editor/ImageEditor.cpp
#	Editor/ImageEditor.ddp
#	Editor/ImageEditor.dfm
	Editor/ImageEditor.h
	Editor/ImageManager.cpp
	Editor/ImageManager.h
	Editor/ImageManagerDO.cpp
#	Editor/ImageManagerLOD.cpp
	Editor/itterate_adjacents_dynamic.h
	Editor/Library.cpp
	Editor/Library.h
#	Editor/LogForm.cpp
#	Editor/LogForm.dfm
#	Editor/LogForm.h
	Editor/LW_ShaderDef.h
	Editor/lwo2.h
#	Editor/MinimapEditor.cpp
#	Editor/MinimapEditor.ddp
#	Editor/MinimapEditor.dfm
	Editor/MinimapEditor.h
	Editor/ParticleEffectActions.cpp
	Editor/ParticleEffectActions.h
	Editor/pDomain.cpp
	Editor/pick_defs.h
	Editor/PropSlimTools.h
	Editor/render.cpp
	Editor/render.h
	Editor/SkeletonFace.h
	Editor/SkeletonVert.h
#	Editor/SoundEditor.cpp
#	Editor/SoundEditor.ddp
#	Editor/SoundEditor.dfm
	Editor/SoundEditor.h
	Editor/SoundManager.cpp
	Editor/SoundManager.h
	Editor/TLSPRITE.CPP
	Editor/TLSPRITE.h
	Editor/UI_Camera.cpp
	Editor/UI_Camera.h
	Editor/ui_main.cpp
	Editor/ui_main.h
	Editor/UI_MainCommand.cpp
	Editor/UI_MainCommand.h
#	Editor/UI_MainMail.cpp
	Editor/UI_ToolsCustom.cpp
	Editor/UI_ToolsCustom.h
	Editor/xrLoadSurface.cpp
	Engine/blenders/Blender_B.cpp
	Engine/blenders/Blender_B.h
	Engine/blenders/blender_light.cpp
	Engine/blenders/blender_light.h
	Engine/bone.cpp
	Engine/cl_collector.cpp
	Engine/cl_collector.h
#	Engine/GameMtlLib.cpp
#	Engine/GameMtlLib.h
#	Engine/GameMtlLib_Engine.cpp
	Engine/guid_generator.cpp
	Engine/guid_generator.h
	Engine/Image.cpp
	Engine/Image.h
	Engine/nv_algebra.cpp
	Engine/nv_algebra.h
	Engine/nv_math.h
	Engine/nv_mathdecl.h
	Engine/NVMeshMender.cpp
	Engine/NVMeshMender.h
	Engine/Texture.h
	ImGui/IM_Canvas.cpp
	ImGui/IM_Canvas.h
	ImGui/IM_ChooseForm.cpp
	ImGui/IM_ChooseForm.h
	ImGui/IM_ImageEditor.cpp
	ImGui/IM_ImageEditor.h
	ImGui/IM_Log.cpp
	ImGui/IM_Log.h
	ImGui/IM_PropertyTree.cpp
	ImGui/IM_PropertyTree.h
#	ImGui/IM_SoundEditor.cpp
#	ImGui/IM_SoundEditor.h
	ImGui/IM_TextEditor.cpp
	ImGui/IM_TextEditor.h
	ImGui/IM_Tree.cpp
	ImGui/IM_Tree.h
	ImGui/IM_Window.cpp
	ImGui/IM_Window.h
	ImGui/imconfig.h
	ImGui/imgui.cpp
	ImGui/imgui.h
	ImGui/imgui_demo.cpp
	ImGui/imgui_draw.cpp
	ImGui/imgui_impl_dx9.cpp
	ImGui/imgui_impl_dx9.h
	ImGui/imgui_internal.h
	ImGui/imgui_user.h
	ImGui/imgui_widgets.cpp
	ImGui/ImGuizmo.cpp
	ImGui/ImGuizmo.h
	ImGui/imstb_rectpack.h
	ImGui/imstb_textedit.h
	ImGui/imstb_truetype.h
	ImGui/utf8.cpp
	ImGui/utf8.h
	dllmain.cpp
	framework.h
	guid.cpp
	RenderWindow.hpp
	stdafx.cpp
	stdafx.h
	../../xrEngine/defines.cpp
	../../xrEngine/defines.h
	../../xrEngine/Envelope.cpp
	../../xrEngine/envelope.h
	../../xrEngine/Environment.cpp
	../../xrEngine/Environment.h
	../../xrEngine/Environment_misc.cpp
	../../xrEngine/Environment_render.cpp
	../../xrEngine/fmesh.cpp
	../../xrEngine/Fmesh.h
	../../xrEngine/GameFont.cpp
	../../xrEngine/GameFont.h
	../../xrEngine/GameMtlLib.cpp
	../../xrEngine/GameMtlLib.h
	../../xrEngine/IGame_Persistent.cpp
	../../xrEngine/IGame_Persistent.h
	../../xrEngine/IInputReceiver.cpp
	../../xrEngine/IInputReceiver.h
	../../xrEngine/interp.cpp
	../../xrEngine/LightAnimLibrary.cpp
	../../xrEngine/LightAnimLibrary.h
	../../xrEngine/motion.cpp
	../../xrEngine/motion.h
	../../xrEngine/ObjectAnimator.cpp
	../../xrEngine/ObjectAnimator.h
	../../xrEngine/perlin.cpp
	../../xrEngine/perlin.h
	../../xrEngine/pure.cpp
	../../xrEngine/pure.h
	../../xrEngine/Rain.cpp
	../../xrEngine/Rain.h
	../../xrEngine/SkeletonMotionDefs.h
	../../xrEngine/SkeletonMotions.cpp
	../../xrEngine/SkeletonMotions.h
	../../xrEngine/thunderbolt.cpp
	../../xrEngine/thunderbolt.h
	../../xrEngine/tntQAVI.cpp
	../../xrEngine/tntQAVI.h
	../../xrEngine/xr_efflensflare.cpp
	../../xrEngine/xr_efflensflare.h
	../../xrEngine/Xr_input.cpp
	../../xrEngine/xr_input.h
	../../xrEngine/xrHemisphere.cpp
	../../xrEngine/xrHemisphere.h
	../../xrEngine/xrImage_Resampler.cpp
	../../xrEngine/xrImage_Resampler.h
	../../xrEngine/xrTheora_Stream.cpp
	../../xrEngine/xrTheora_Stream.h
	../../xrEngine/xrTheora_Surface.cpp
	../../xrEngine/xrTheora_Surface.h
	../../Layers/xrRender/blenders/Blender.cpp
	../../Layers/xrRender/blenders/Blender.h
	../../Layers/xrRender/blenders/Blender_CLSID.h
	../../Layers/xrRender/blenders/Blender_Palette.cpp
	../../Layers/xrRender/blenders/Blender_Recorder.cpp
	../../Layers/xrRender/blenders/Blender_Recorder.h
	../../Layers/xrRender/Animation.cpp
	../../Layers/xrRender/Animation.h
	../../Layers/xrRender/Blender_BmmD.cpp
	../../Layers/xrRender/Blender_BmmD.h
	../../Layers/xrRender/Blender_detail_still.cpp
	../../Layers/xrRender/Blender_detail_still.h
	../../Layers/xrRender/Blender_Editor_Selection.cpp
	../../Layers/xrRender/Blender_Editor_Selection.h
	../../Layers/xrRender/Blender_Editor_Wire.cpp
	../../Layers/xrRender/Blender_Editor_Wire.h
	"../../Layers/xrRender/Blender_Lm(EbB).cpp"
	"../../Layers/xrRender/Blender_Lm(EbB).h"
	../../Layers/xrRender/Blender_Model_EbB.cpp
	../../Layers/xrRender/Blender_Model_EbB.h
	../../Layers/xrRender/Blender_Particle.cpp
	../../Layers/xrRender/Blender_Particle.h
	../../Layers/xrRender/Blender_Recorder_R2.cpp
	../../Layers/xrRender/Blender_Recorder_StandartBinding.cpp
	../../Layers/xrRender/Blender_Screen_SET.cpp
	../../Layers/xrRender/Blender_Screen_SET.h
	../../Layers/xrRender/Blender_tree.cpp
	../../Layers/xrRender/Blender_tree.h
	../../Layers/xrRender/D3DUtils.cpp
	../../Layers/xrRender/D3DUtils.h
	../../Layers/xrRender/DetailModel.cpp
	../../Layers/xrRender/DetailModel.h
	../../Layers/xrRender/du_box.cpp
	../../Layers/xrRender/du_box.h
	../../Layers/xrRender/du_cone.cpp
	../../Layers/xrRender/du_cone.h
	../../Layers/xrRender/du_cylinder.cpp
	../../Layers/xrRender/du_cylinder.h
	../../Layers/xrRender/du_sphere.cpp
	../../Layers/xrRender/du_sphere.h
	../../Layers/xrRender/du_sphere_part.cpp
	../../Layers/xrRender/du_sphere_part.h
	../../Layers/xrRender/dxEnvironmentRender.cpp
	../../Layers/xrRender/dxEnvironmentRender.h
	../../Layers/xrRender/dxFontRender.cpp
	../../Layers/xrRender/dxFontRender.h
	../../Layers/xrRender/dxLensFlareRender.cpp
	../../Layers/xrRender/dxLensFlareRender.h
	../../Layers/xrRender/dxRainRender.cpp
	../../Layers/xrRender/dxRainRender.h
	../../Layers/xrRender/dxRenderFactory.cpp
	../../Layers/xrRender/dxRenderFactory.h
	../../Layers/xrRender/dxThunderboltDescRender.cpp
	../../Layers/xrRender/dxThunderboltDescRender.h
	../../Layers/xrRender/dxThunderboltRender.cpp
	../../Layers/xrRender/dxThunderboltRender.h
	../../Layers/xrRender/ETextureParams.cpp
	../../Layers/xrRender/ETextureParams.h
	../../Layers/xrRender/FBasicVisual.cpp
	../../Layers/xrRender/FBasicVisual.h
	../../Layers/xrRender/FHierrarhyVisual.cpp
	../../Layers/xrRender/FHierrarhyVisual.h
	../../Layers/xrRender/FProgressive.cpp
	../../Layers/xrRender/FProgressive.h
	../../Layers/xrRender/FSkinned.cpp
	../../Layers/xrRender/FSkinned.h
	../../Layers/xrRender/FVisual.cpp
	../../Layers/xrRender/FVisual.h
	../../Layers/xrRender/HW.cpp
	../../Layers/xrRender/HW.h
	../../Layers/xrRender/HWCaps.cpp
	../../Layers/xrRender/HWCaps.h
	../../Layers/xrRender/ModelPool.cpp
	../../Layers/xrRender/ModelPool.h
	../../Layers/xrRender/ParticleEffect.cpp
	../../Layers/xrRender/ParticleEffect.h
	../../Layers/xrRender/ParticleEffectDef.cpp
	../../Layers/xrRender/ParticleEffectDef.h
	../../Layers/xrRender/ParticleGroup.cpp
	../../Layers/xrRender/ParticleGroup.h
	../../Layers/xrRender/PSLibrary.cpp
	../../Layers/xrRender/PSLibrary.h
	../../Layers/xrRender/R_Backend.cpp
	../../Layers/xrRender/R_Backend.h
	../../Layers/xrRender/R_Backend_DBG.cpp
	../../Layers/xrRender/R_Backend_hemi.cpp
	../../Layers/xrRender/R_Backend_hemi.h
	../../Layers/xrRender/R_Backend_Runtime.cpp
	../../Layers/xrRender/R_Backend_Runtime.h
	../../Layers/xrRender/R_Backend_tree.cpp
	../../Layers/xrRender/R_Backend_tree.h
	../../Layers/xrRender/R_Backend_xform.cpp
	../../Layers/xrRender/R_Backend_xform.h
	../../Layers/xrRender/r_constants.cpp
	../../Layers/xrRender/r_constants.h
	../../Layers/xrRender/r_constants_cache.h
	../../Layers/xrRender/R_DStreams.cpp
	../../Layers/xrRender/R_DStreams.h
	../../Layers/xrRender/ResourceManager.cpp
	../../Layers/xrRender/ResourceManager.h
	../../Layers/xrRender/ResourceManager_Loader.cpp
	../../Layers/xrRender/ResourceManager_Reset.cpp
	../../Layers/xrRender/ResourceManager_Resources.cpp
#	../../Layers/xrRender/ResourceManager_Scripting.cpp
	../../Layers/xrRender/SH_Atomic.cpp
	../../Layers/xrRender/SH_Atomic.h
	../../Layers/xrRender/SH_Constant.cpp
	../../Layers/xrRender/SH_Constant.h
	../../Layers/xrRender/SH_Matrix.cpp
	../../Layers/xrRender/SH_Matrix.h
	../../Layers/xrRender/SH_RT.cpp
	../../Layers/xrRender/SH_RT.h
	../../Layers/xrRender/SH_Texture.cpp
	../../Layers/xrRender/SH_Texture.h
	../../Layers/xrRender/Shader.cpp
	../../Layers/xrRender/Shader.h
	../../Layers/xrRender/SkeletonAnimated.cpp
	../../Layers/xrRender/SkeletonAnimated.h
	../../Layers/xrRender/SkeletonCustom.cpp
	../../Layers/xrRender/SkeletonCustom.h
	../../Layers/xrRender/SkeletonRigid.cpp
	../../Layers/xrRender/SkeletonX.cpp
	../../Layers/xrRender/SkeletonX.h
	../../Layers/xrRender/Texture.cpp
	../../Layers/xrRender/TextureDescrManager.cpp
	../../Layers/xrRender/TextureDescrManager.h
	../../Layers/xrRender/tga.cpp
	../../Layers/xrRender/tga.h
	../../Layers/xrRender/tss.h
	../../Layers/xrRender/tss_def.cpp
	../../Layers/xrRender/tss_def.h
	../../Layers/xrRender/xrRender_console.cpp
	../../Layers/xrRender/xrRender_console.h
	../../Layers/xrRenderPC_R1/Blender_Blur.cpp
	../../Layers/xrRenderPC_R1/Blender_Blur.h
	../../Layers/xrRenderPC_R1/Blender_default_aref.cpp
	../../Layers/xrRenderPC_R1/Blender_default_aref.h
	../../Layers/xrRenderPC_R1/Blender_LaEmB.cpp
	../../Layers/xrRenderPC_R1/Blender_LaEmB.h
	../../Layers/xrRenderPC_R1/Blender_Model.cpp
	../../Layers/xrRenderPC_R1/Blender_Model.h
	../../Layers/xrRenderPC_R1/Blender_Screen_GRAY.cpp
	../../Layers/xrRenderPC_R1/Blender_Screen_GRAY.h
	../../Layers/xrRenderPC_R1/Blender_Shadow_World.cpp
	../../Layers/xrRenderPC_R1/Blender_Shadow_World.h
	../../Layers/xrRenderPC_R1/Blender_Vertex.cpp
	../../Layers/xrRenderPC_R1/Blender_Vertex.h
	../../Layers/xrRenderPC_R1/Blender_Vertex_aref.cpp
	../../Layers/xrRenderPC_R1/Blender_Vertex_aref.h
	../../Layers/xrRenderPC_R1/BlenderDefault.cpp
	../../Layers/xrRenderPC_R1/BlenderDefault.h
	../../Layers/xrRenderDX9/dx9r_constants_cache.cpp
	../../Layers/xrRenderDX9/dx9r_constants_cache.h
	../../xrCPU_Pipe/xrSkin1W.cpp
	../../xrCPU_Pipe/xrSkin2W.cpp
	../../Include/ai_sounds.cpp
	../../Include/builder_types.cpp
	../../Include/builder_types.h
	../../Layers/Editor/RAPIDMinBox.cpp
	"../../../3rd_party/NvMender2003/convert.h"
	"../../../3rd_party/NvMender2003/mender_input_output.h"
	"../../../3rd_party/NvMender2003/NVMeshMender.cpp"
	"../../../3rd_party/NvMender2003/NVMeshMender.h"
	"../../../3rd_party/NvMender2003/ReadMe.txt"
	"../../../3rd_party/NvMender2003/remove_isolated_verts.h")
target_link_libraries(${PROJECT_NAME} PRIVATE
	xrCore
	libtheora_static
	libogg
	xrSound
	xrParticles
	ETools
	xrEProps
	LWO
	DXT
	WildMagic
	MagicFM
	FreeImage.lib
	vfw32.lib
	dxguid.lib
	dinput8.lib
	d3dx9.lib
	winmm.lib
	Rpcrt4.lib)
