cmake_minimum_required(VERSION 3.15)
project(LevelEditor LANGUAGES C CXX)

add_executable(${PROJECT_NAME} WIN32)
target_compile_definitions(${PROJECT_NAME} PRIVATE -DNO_VCL -D_EDITOR -D_LEVEL_EDITOR)
target_include_directories(${PROJECT_NAME} PRIVATE
	../..
	.)
target_precompile_headers(${PROJECT_NAME} PRIVATE stdafx.h)
target_sources(${PROJECT_NAME} PRIVATE
	Edit/AppendObjectInfoForm.cpp
#	Edit/AppendObjectInfoForm.ddp
#	Edit/AppendObjectInfoForm.dfm
	Edit/AppendObjectInfoForm.h
	Edit/Builder.cpp
	Edit/Builder.h
	Edit/BuilderCF.cpp
	Edit/BuilderCore.cpp
	Edit/BuilderGame.cpp
	Edit/BuilderLODs.cpp
	Edit/BuilderLTX.cpp
	Edit/BuilderOGF.cpp
	Edit/BuilderRemote.cpp
	Edit/Cursor3D.cpp
	Edit/Cursor3D.h
	Edit/Custom2DProjector.cpp
	Edit/Custom2DProjector.h
	Edit/CustomObject.cpp
	Edit/CustomObject.h
	Edit/CustomObjectAnimation.cpp
	Edit/CustomObjectLE.cpp
#	Edit/EditObjectExportLWO.cpp
	Edit/ELight.cpp
	Edit/ELight.h
	Edit/ELight_def.h
	Edit/ELight_IO.cpp
	Edit/ELight_props.cpp
	Edit/EParticlesObject.cpp
	Edit/EParticlesObject.h
	Edit/ESceneAIMapControls.cpp
	Edit/ESceneAIMapControls.h
	Edit/ESceneAIMapTools.cpp
	Edit/ESceneAIMapTools.h
	Edit/ESceneAIMapTools_Controls.cpp
	Edit/ESceneAIMapTools_Export.cpp
	Edit/ESceneAIMapTools_Export.h
	Edit/ESceneAIMapTools_Generate.cpp
	Edit/ESceneAIMapTools_MotionSimulator.cpp
	Edit/ESceneAIMapTools_Pick.cpp
	Edit/ESceneAIMapTools_Render.cpp
	Edit/ESceneClassList.h
	Edit/ESceneControlsCustom.cpp
	Edit/ESceneControlsCustom.h
	Edit/ESceneCustomMTools.cpp
	Edit/ESceneCustomMTools.h
	Edit/ESceneCustomMToolsControls.cpp
	Edit/ESceneCustomOTools.cpp
	Edit/ESceneCustomOTools.h
	Edit/ESceneCustomOToolsFactory.cpp
	Edit/ESceneCustomOToolsIO.cpp
	Edit/ESceneDOTools.cpp
	Edit/ESceneDOTools.h
	Edit/ESceneDOTools_Controls.cpp
	Edit/ESceneDOTools_Generate.cpp
	Edit/ESceneDOTools_Pick.cpp
	Edit/ESceneDummyTools.cpp
	Edit/ESceneDummyTools.h
	Edit/ESceneFogVolumeTools.cpp
	Edit/ESceneFogVolumeTools.h
	Edit/ESceneGlowTools.cpp
	Edit/ESceneGlowTools.h
	Edit/ESceneGlowToolsIO.cpp
	Edit/ESceneGroupControls.cpp
	Edit/ESceneGroupControls.h
	Edit/ESceneGroupTools.cpp
	Edit/ESceneGroupTools.h
	Edit/ESceneGroupToolsIO.cpp
	Edit/ESceneLightTools.cpp
	Edit/ESceneLightTools.h
	Edit/ESceneLightToolsIO.cpp
	Edit/ESceneObjectControls.cpp
	Edit/ESceneObjectControls.h
	Edit/ESceneObjectTools.cpp
	Edit/ESceneObjectTools.h
#	Edit/ESceneObjectTools_.cpp
#	Edit/ESceneObjectTools__.cpp
	Edit/ESceneObjectToolsExportBreakable.cpp
	Edit/ESceneObjectToolsIO.cpp
	Edit/EScenePortalControls.cpp
	Edit/EScenePortalControls.h
	Edit/EScenePortalTools.cpp
	Edit/EScenePortalTools.h
	Edit/EScenePortalToolsIO.cpp
	Edit/EScenePSControls.cpp
	Edit/EScenePSControls.h
	Edit/EScenePSTools.cpp
	Edit/EScenePSTools.h
	Edit/EScenePSToolsIO.cpp
	Edit/ESceneSectorControls.cpp
	Edit/ESceneSectorControls.h
	Edit/ESceneSectorTools.cpp
	Edit/ESceneSectorTools.h
	Edit/ESceneSectorToolsIO.cpp
	Edit/ESceneShapeControls.cpp
	Edit/ESceneShapeControls.h
	Edit/ESceneShapeTools.cpp
	Edit/ESceneShapeTools.h
	Edit/ESceneShapeToolsIO.cpp
	Edit/ESceneSoundEnvTools.cpp
	Edit/ESceneSoundEnvTools.h
	Edit/ESceneSoundEnvToolsIO.cpp
	Edit/ESceneSoundSrcTools.cpp
	Edit/ESceneSoundSrcTools.h
	Edit/ESceneSoundSrcToolsIO.cpp
	Edit/ESceneSpawnControls.cpp
	Edit/ESceneSpawnControls.h
	Edit/ESceneSpawnTools.cpp
	Edit/ESceneSpawnTools.h
	Edit/ESceneSpawnToolsIO.cpp
	Edit/ESceneWallmarkControls.cpp
	Edit/ESceneWallmarkControls.h
	Edit/ESceneWallmarkTools.cpp
	Edit/ESceneWallmarkTools.h
	Edit/ESceneWayControls.cpp
	Edit/ESceneWayControls.h
	Edit/ESceneWayTools.cpp
	Edit/ESceneWayTools.h
	Edit/ESceneWayToolsIO.cpp
	Edit/EShape.cpp
	Edit/EShape.h
	Edit/ESound_Environment.cpp
	Edit/ESound_Environment.h
	Edit/ESound_Source.cpp
	Edit/ESound_Source.h
#	Edit/FS2.cpp
#	Edit/FS2.h
	Edit/GeometryPartExtractor.cpp
	Edit/GeometryPartExtractor.h
	Edit/glow.cpp
	Edit/glow.h
	Edit/GroupObject.cpp
	Edit/GroupObject.h
	Edit/GroupObjectUtils.cpp
	Edit/LevelPreferences.cpp
	Edit/LevelPreferences.h
	Edit/lwchunks.h
	Edit/portal.cpp
	Edit/portal.h
	Edit/portalutils.cpp
	Edit/portalutils.h
	Edit/scene.cpp
	Edit/scene.h
	Edit/Scene_Tools.cpp
	Edit/SceneGraph.h
	Edit/SceneIO.cpp
	Edit/SceneObject.cpp
	Edit/SceneObject.h
	Edit/SceneObjectIO.cpp
	Edit/ScenePick.cpp
	Edit/SceneRender.cpp
	Edit/SceneSelection.cpp
	Edit/SceneSnap.cpp
	Edit/SceneSummaryInfo.cpp
	Edit/SceneSummaryInfo.h
	Edit/SceneUndo.cpp
	Edit/SceneUtil.cpp
	Edit/sector.cpp
	Edit/sector.h
	Edit/SoundManager_LE.cpp
	Edit/SoundManager_LE.h
	Edit/SpawnPoint.cpp
	Edit/SpawnPoint.h
	Edit/UI_LevelMain.cpp
	Edit/UI_LevelMain.h
	Edit/UI_LevelTools.cpp
	Edit/UI_LevelTools.h
	Edit/WayPoint.cpp
	Edit/WayPoint.h
#	Engine\
#	Forms\
	ImGui/IM_FrameAIMap.cpp
	ImGui/IM_FrameAIMap.h
	ImGui/IM_FrameDetail.cpp
	ImGui/IM_FrameDetail.h
	ImGui/IM_FrameFogVol.cpp
	ImGui/IM_FrameFogVol.h
	ImGui/IM_FrameGroup.cpp
	ImGui/IM_FrameGroup.h
	ImGui/IM_FrameLight.cpp
	ImGui/IM_FrameLight.h
	ImGui/IM_FrameObject.cpp
	ImGui/IM_FrameObject.h
	ImGui/IM_FramePortal.cpp
	ImGui/IM_FramePortal.h
	ImGui/IM_FramePS.cpp
	ImGui/IM_FramePS.h
	ImGui/IM_FrameSector.cpp
	ImGui/IM_FrameSector.h
	ImGui/IM_FrameShape.cpp
	ImGui/IM_FrameShape.h
	ImGui/IM_FrameSpawn.cpp
	ImGui/IM_FrameSpawn.h
	ImGui/IM_FrameWayPoint.cpp
	ImGui/IM_FrameWayPoint.h
	ImGui/IM_LeftBar.cpp
	ImGui/IM_LeftBar.h
	ImGui/IM_TopBar.cpp
	ImGui/IM_TopBar.h
	ImGui/IM_ContextMenu.cpp
	ImGui/IM_ContextMenu.h
	ImGui/IM_Manipulator.cpp
	ImGui/IM_Manipulator.h
	framework.h
	iniStreamImpl.cpp
	iniStreamImpl.h
	LevelEditor.cpp
	LevelEditor.h
	LevelEditor.ico
	LevelEditor.rc
	Resource.h
	small.ico
	StatusBar.cpp
	StatusBar.h
	stdafx.cpp
	stdafx.h
	targetver.h
	../../Include/builder_types.cpp
	../../Include/builder_types.h
	../../xrServerEntities/gametype_chooser.cpp
	../../xrServerEntities/gametype_chooser.h
	../../xrServerEntities/LevelGameDef.cpp
	../../xrServerEntities/LevelGameDef.h
	../../Layers/xrRender/DetailManager.cpp
	../../Layers/xrRender/DetailManager.h
	../../Layers/xrRender/DetailManager_CACHE.cpp
	../../Layers/xrRender/DetailManager_Decompress.cpp
	../../Layers/xrRender/DetailManager_soft.cpp
	../../Layers/xrRender/DetailManager_VS.cpp)
target_link_libraries(${PROJECT_NAME} PRIVATE xrCore ECore xrEProps xrCDB ETools xrSound MagicFM comctl32)
